# fwbg-agents

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .release-please-config.json  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  pyproject.toml
.github/: dependabot.yml
.github/workflows/: dependabot-automerge.yml  deploy.yml  release-please.yml
docs/plans/: 2026-07-03-preset-crystallization.md  2026-07-07-speckit-plugin-workflow.md  (+4 more)
plans/: 001-enforce-deterministic-safety-gates.md  002-dependency-manifest-hygiene.md  003-ci-quality-gates.md  004-harden-llm-code-path.md  005-complete-evaluator-invariants.md  006-agent-run-detail-view.md  007-fwbg-agent-plugin-namespace.md  008-agent-run-timeline-followups.md  009-strategy-loop-quality.md  010-profitability-levers.md  011-fwbg-api-auth-and-agent-key.md  012-fwbg-strategy-path-validation.md  013-fwbg-run-concurrency-contract.md  014-lineage-holdout-policy.md  015-durable-trial-stats-dsr.md  016-paper-fidelity.md  017-portfolio-risk-layer-spike.md  018-llm-cost-telemetry.md  019-dukascopy-data-quality.md  020-timeframe-rollout-followups.md  021-ig-adapter-test-rot-repair.md  022-plugin-execution-sandbox.md  023-temporal-validation-integrity.md  024-dashboard-trading-security-boundary.md  025-establish-dashboard-and-service-identity.md  026-add-versioned-final-evaluation-contract.md  027-isolate-plugin-validation-and-adoption.md  README.md
prompts/: plugin_authoring.md  plugin_constitution.md
scripts/: backfill_llm_costs.py  backfill_plugin_specs.py  backfill_trial_stats.py  m2_smoke.py  m3_smoke.py  m4_smoke.py  m4b_smoke.py  m5_smoke.py  m5c_smoke.py  m5d_smoke.py  m6a_smoke.py  m6b_smoke.py  spike_portfolio_correlation.py
tests/: conftest.py  test_config.py  test_config_plugin_authoring.py  test_run_events.py
(+184 files in other folders)
