[project]
name = "fwbg-agents"
version = "0.22.1"
description = "Autonomous agents for fwbg strategy research, backtesting, paper trading, and live trading"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "pydantic-ai>=2.0,<3",
    "anthropic>=0.40",
    "httpx>=0.28.0",
    "sse-starlette>=2.1.0",
    "pyyaml>=6.0.2",
    "numpy>=2.1.0",
    "pandas>=2.2.0",
    "pyarrow>=18.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "hypothesis>=6.118.0",
    "types-pyyaml>=6.0.12.20260518",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fwbg_agents"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
# B008: FastAPI's Depends()/Body() are meant to be called in argument
# defaults - that's the framework's DI mechanism, not a bug.
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
# SQLAlchemy's own docs use PascalCase for sessionmaker aliases
# (Session = sessionmaker(...); session = Session()) - that's the
# pattern these test fixtures follow, not a real naming violation.
# N803 covers the same alias passed as a parameter rather than assigned.
"tests/**" = ["N806", "N803"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=fwbg_agents --cov-report=term-missing:skip-covered"
